Fix crash in ProcessMemoryMetricsEmitter::GetNumberOfExtensions .

Bug: 841974
Change-Id: Ie847933ad8090024a14807cc4db629a837266092
Reviewed-on: https://chromium-review.googlesource.com/1054638
Reviewed-by: Ilya Sherman <isherman@chromium.org>
Commit-Queue: Alexander Alekseev <alemate@chromium.org>
Cr-Commit-Position: refs/heads/master@{#557723}
Former-commit-id: 6f5ed232f4934bc9ea33b41ed0996acb21273043